--- a/Project/Test/MDK-ARM/STM32L152-EVAL/STM32L152-EVAL.build_log.htm
+++ b/Project/Test/MDK-ARM/STM32L152-EVAL/STM32L152-EVAL.build_log.htm
@@ -26,14 +26,14 @@ Project File Date:  08/16/2018
 
 <h2>Output:</h2>
 Build target 'STM32L1XX_MD(STM32L1xxxBxx)'
-compiling bc95_wjl.c...
+compiling main.c...
 ..\..\HARDWARE\BC95\bc95.h(21): warning:  #14-D: extra text after expected end of preprocessing directive
   #endif _BC95_H_
-..\..\HARDWARE\wjl\bc95_wjl.c(149): warning:  #223-D: function "delay_ms" declared implicitly
-        delay_ms(1);
-..\..\HARDWARE\wjl\bc95_wjl.c: 2 warnings, 0 errors
+..\main.c(178): warning:  #167-D: argument of type "int8_t *" is incompatible with parameter of type "uint8_t *"
+                        BC95_Senddata_wjl(RxCounter1,sendata);                  //∑¢ÀÕ≤‚ ‘ ˝æ›
+..\main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=4164 RO-data=276 RW-data=88 ZI-data=1224  
+Program Size: Code=4384 RO-data=276 RW-data=88 ZI-data=1224  
 FromELF: creating hex file...
 ".\STM32L152-EVAL\STM32L152-EVAL.axf" - 0 Error(s), 2 Warning(s).
 
